multitenant-auth-db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: multitenant-auth-db
spec:
  serviceName: multitenant-auth-db
  replicas: 1
  selector:
    matchLabels:
      app: multitenant-auth-db
  template:
    metadata:
      labels:
        app: multitenant-auth-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: config
              mountPath: /etc/mysql/my.cnf
              subPath: my.cnf
      volumes:
        - name: config
          configMap:
            name: multitenant-auth-db-config-map
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
