multitenant-auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitenant-auth
  labels:
    app: multitenant-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitenant-auth
  template:
    metadata:
      labels:
        app: multitenant-auth
    spec:
      containers:
        - name: multitenant-auth-php
          image: php-mt-auth-k8:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: app
              mountPath: /var/www
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
        - name: multitenant-auth-nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: multitenant-auth-nginx-conf
              mountPath: /etc/nginx/conf.d
              readOnly: true
            - name: app
              mountPath: /var/www
              readOnly: true
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
      volumes:
        - name: app
          emptyDir: {}
        - name: multitenant-auth-nginx-conf
          configMap:
            name: multitenant-auth-nginx-config-map
