ec-proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ec-proxy-service
spec:
  type: ExternalName
  externalName: app-service.multitenant-ec.svc.cluster.local
  ports:
    - port: 8000
      targetPort: 8000
