menu-proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: menu-proxy-service
spec:
  type: ExternalName
  externalName: app-service.multitenant-menu.svc.cluster.local
  ports:
    - port: 8000
      targetPort: 8000
