multitenant-auth-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: multitenant-auth-service
  name: multitenant-auth-service
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 80
  selector:
    app: multitenant-auth
  type: ClusterIP
