multitenant-cafe-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: multitenant-cafe-service
  name: multitenant-cafe-service
spec:
  ports:
    - port: 8002
      protocol: TCP
      targetPort: 80
  selector:
    app: multitenant-cafe
  type: ClusterIP
