multitenant-menu-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: multitenant-menu-service
  name: multitenant-menu-service
spec:
  ports:
    - port: 8001
      protocol: TCP
      targetPort: 80
  selector:
    app: multitenant-menu
  type: ClusterIP
